Prevent horizontal scrolling by correctly setting right position for background

--- a/styles/layout-default.less
+++ b/styles/layout-default.less
@@ -7,6 +7,7 @@ body {
   color: @text-color;
   background: @background-color;
   font: @base-font;
+  margin: @page-margin;
 }
 
 header {
@@ -583,9 +584,9 @@ nav {
 
 #right-panel-background {
     position: absolute;
-    right: -@padding;
-    top: -@padding;
-    bottom: -@padding;
+    right: -@page-margin;
+    top: -@page-margin;
+    bottom: -@page-margin;
     width: @right-panel-background-width;
     background-color: @right-background-color;
     z-index: -1;
