--- a/styles/variables-default.less
+++ b/styles/variables-default.less
@@ -2,12 +2,13 @@
 
 /* Page-wide variables */
 @padding: 12px;
+@page-margin: 8px;
 @border-radius: 6px;
 @font-size: 14px;
 @nav-width: 220px;
 @nav-triple-width: 16.5%;
 @right-panel-width: 48.5%;
-@right-panel-background-width: 48.6%;
+@right-panel-background-width: 48.2%;
 
 @base-font: 400 14px ~"/" 1.42 'Roboto', Helvetica, sans-serif;
 @title-font: 200 36px 'Raleway', Helvetica, sans-serif;
